Revert "Fix flickering line at top of page"

--- a/style.css
+++ b/style.css
@@ -22,11 +22,13 @@ html, body {
 }
 #video-wrapper {
   position: fixed;
-  inset: 0;
-  width: 100vw;
-  height: 100vh;
+  top: 0;
+  left: 0;
+  width: 1920px;
+  height: 1080px;
   overflow: hidden;
   z-index: 0;
+  transform-origin: top left;
 }
 .arcade-bg {
   position: absolute;
